--- a/deployment.yml
+++ b/deployment.yml
@@ -14,22 +14,7 @@ spec:
     spec:
       containers:
       - name: helloworld
-        image: karthequian/helloworld:latest
+        image: santoshgoru/hello-world:v2
         ports:
         - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
- name: helloworld
-spec:
- type: NodePort
- selector:
-   app: helloworld
- ports:
-   - name: client
-     protocol: TCP
-     port: 80
-     nodePort: 32080
- selector:
-   app: helloworld
+
