--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,25 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: helloworld
+  name: helloworld
 spec:
- ports:
-  - port: 80
+  type: ClusterIP
+  selector:
+    app: helloworld
+  ports:
+  - name: http
+    port: 80
     targetPort: 80
-    protocol: TCP
- selector:
-   app: helloworld
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: helloworld-external
+spec:
+  type: LoadBalancer
+  selector:
+    app: helloworld
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
